[ALLI-3844] Fix still overflowing holdings table. update css

--- a/themes/finna/less/bootstrap/finna/holdings.less
+++ b/themes/finna/less/bootstrap/finna/holdings.less
@@ -87,7 +87,7 @@
         padding: 2px 4px;
         margin-bottom: 2px;
     }
-    @media (max-width: 340px) {
+    @media (max-width: 450px) {
         table-layout: fixed;   
     }
 }
